--- a/WpfApp_final_MasterMind/WpfApp1_final_MasterMind.csproj
+++ b/WpfApp_final_MasterMind/WpfApp1_final_MasterMind.csproj
@@ -90,6 +90,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="assets\gb-gba-overlays-free-to-a-good-home-v0-d527iycm725b1.webp" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -97,6 +98,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\background.color.png.ecf677d68a6541f71e6264183a91c503.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\gb-gba-overlays-free-to-a-good-home-v0-d527iycm725b1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
